// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorPage /> should NOT render info and should render server error image image 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eOqngX sc-dlfnbm evdNNg"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <svg>
      server-connection-error.svg
    </svg>
  </div>
</DocumentFragment>
`;

exports[`<ErrorPage /> should render "Something went wrong" and unexpected bug image 1`] = `
<DocumentFragment>
  <div
    class="sc-bdfBwQ eOqngX sc-dlfnbm evdNNg"
    direction="column"
    spacing="3"
    width="100%"
    wrap="nowrap"
  >
    <h3
      class="sc-gsTCUz dKvEuV"
    >
      Something went wrong
    </h3>
    <svg>
      unexpected-bug.svg
    </svg>
  </div>
</DocumentFragment>
`;
